# api

./: .gitignore  Cargo.toml  README.md  Rocket.toml.bak  rust-toolchain.toml
.github/workflows/: rust.yml
src/: error.rs  main.rs
src/models/: cat_gram.rs  counters.rs  dictionary.rs  entry.rs  lang.rs  mod.rs  topic.rs
src/routes/v1/: dict.rs  mod.rs
