[package]
name = "neolatino-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.28.2"
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde", "unstable-locales"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
reqwest = "0.11.20"
csv = "1.2.2"
enum-map = { version = "2.6.3" , features = ["serde"]}
strum = { version = "0.25.0" , features = ["derive"]}
# API
rocket = { version = "0.5.0-rc.2", features = ["json"] }
schemars = { version = "0.8.10", features=["chrono"] }
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger"] }